hydroflow/tests/snapshots/surface_codegen__basic_2@graphvis_dot.snap
---
source: hydroflow/tests/surface_codegen.rs
expression: df.meta_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n1v1 [label="(n1v1) source_iter([1])", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) for_each(|v| out_send.try_send(v).unwrap())", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n1v1 -> n2v1
    }
}

